examples/app/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: example-app
  labels:
    app.kubernetes.io/managed-by: kubectl
    app.kubernetes.io/part-of: example-app
